tdf#142549 Assertion failure when closing LO in gtk a11y

since...

commit d90aa314961ea4a6893144cd6be66dd71cc2cca1
Date:   Fri May 28 20:39:00 2021 +0200

    IsDisposed->isDisposed in vcl/../app

revert the offending hunk for now.

maybe final fix is to special case VclEventId::ObjectDying or convert to
!xWin->mpWindowImpl or something.

Change-Id: I6987aeb753181fa2eb705fa0535c092e51587a9f